--- a/mini-autorizador/src/main/resources/application.properties
+++ b/mini-autorizador/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/miniautorizador
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+logging.file.name=logDaAplicacao.log
+logging.file.path=/var/log
